# pomobar

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
resources/: Pomobar.icns
scripts/: generate-app-icon.sh  package-macos-app.sh
src/: app.rs  audio.rs  event.rs  launch_agent.rs  main.rs  menu.rs  models.rs  notifications.rs  persistence.rs  timer.rs  tray.rs
