[package]
name = "pomobar"
version = "0.1.0"
edition = "2021"
description = "A native macOS menubar Pomodoro timer"
authors = ["Daniel Schmidt"]

[dependencies]
# System tray
tray-icon = "0.19"
muda = "0.15"

# Event loop (required for tray on macOS)
winit = "0.30"

# Audio
rodio = "0.19"

# Notifications
notify-rust = "4"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# App directories
directories = "6"

# Image loading for tray icon
image = "0.25"

# Error handling
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-resource = "3"
